compiler/testData/diagnostics/tests/regressions/kt2956.kt
val a: String = <!INVISIBLE_MEMBER, FUNCTION_CALL_EXPECTED!>Nothing<!>